--- a/UpaProject/App.xaml
+++ b/UpaProject/App.xaml
@@ -2,12 +2,15 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:UpaProject"
-             StartupUri="MainWindow.xaml">
+             StartupUri=".\Views\MainWindow.xaml">
     <Application.Resources>
-        <Style TargetType="TextBlock">
+        <Style TargetType="TextBlock" x:Key="Txt">
             <Setter Property="FontFamily" Value="Franklin Gothic Heavy"/>
             <Setter Property="FontSize" Value="12pt"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="TextAlignment" Value="Left"/>
             <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="MinWidth" Value="200"/>
         </Style>
         <Style TargetType="CheckBox">
             <Setter Property="FontFamily" Value="Franklin Gothic Heavy"/>
@@ -15,19 +18,20 @@
             <Setter Property="FontWeight" Value="Bold"/>
         </Style>
         <Style TargetType="TextBox">
-            <Setter Property="FontFamily" Value="Tw Cen MT"/>
+            <Setter Property="FontFamily" Value="Franklin Gothic Heavy"/>
             <Setter Property="FontSize" Value="12pt"/>
+            <Setter Property="FontWeight" Value="Bold"/>
         </Style>
         <!--Кнопка для меню-->
         <Style TargetType="Button" x:Key="Button_Main">
-            <Setter Property="FontFamily" Value="Franklin Gothic Heavy"/>
-            <Setter Property="Height" Value="65"/>
             <Setter Property="FrameworkElement.Margin" Value="5,3,5,3"/>
             <Setter Property="Background" Value="White"/>
-            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontFamily" Value="Franklin Gothic Heavy"/>
+            <Setter Property="FontSize" Value="12pt"/>
+            <Setter Property="MinHeight" Value="70"/>
+            <Setter Property="FontWeight" Value="DemiBold"/>
             <Setter Property="Foreground" Value="#FF3D3D35"/>
-            <Setter Property="FontSize" Value="12px"/>
-            <Setter Property="TextBlock.TextWrapping" Value="Wrap"/>
+            <Setter Property="Padding" Value="10"/>
         </Style>
         <!--Кнопка для страниц-->
         <Style TargetType="Button" x:Key="ButtonFrame">
@@ -36,6 +40,7 @@
             <Setter Property="Width" Value="auto"/>
             <Setter Property="FrameworkElement.Margin" Value="10,5,10,3"/>
             <Setter Property="Background" Value="#7F088DD0"/>
+            <Setter Property="FontFamily" Value="Franklin Gothic Heavy"/>
             <Setter Property="FontWeight" Value="DemiBold"/>
             <Setter Property="Foreground" Value="#FF0E0E0B"/>
             <Setter Property="FontSize" Value="12px"/>
@@ -49,8 +54,9 @@
             <Setter Property="Width" Value="auto"/>
             <Setter Property="FrameworkElement.Margin" Value="10,5,10,3"/>
             <Setter Property="Background" Value="#7F088DD0"/>
-            <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="Foreground" Value="#FF0E0E0B"/>
+            <Setter Property="FontFamily" Value="Franklin Gothic Heavy"/>
+            <Setter Property="FontWeight" Value="DemiBold"/>
             <Setter Property="FontSize" Value="12px"/>
             <Setter Property="TextBlock.TextWrapping" Value="Wrap"/>
             <Setter Property="Padding" Value="10"/>
@@ -58,11 +64,15 @@
         </Style>
         <Style TargetType="MenuItem" x:Key="BtnItem">
             <Setter Property="Style" Value="{StaticResource Button_Main}"/>
+            <Setter Property="FontFamily" Value="Franklin Gothic Heavy"/>
+            <Setter Property="FontWeight" Value="DemiBold"/>
+            <Setter Property="FontSize" Value="12px"/>
             <Setter Property="Height" Value="65"/>
         </Style>
         <Style TargetType="ComboBox" x:Key="CmbCatalog">
             <Setter Property="FontFamily" Value="Franklin Gothic Heavy"/>
-            <Setter Property="FontSize" Value=" 13pt"/>
+            <Setter Property="FontWeight" Value="DemiBold"/>
+            <Setter Property="FontSize" Value="12px"/>
             <Setter Property="Height" Value="auto"/>
             <Setter Property="IsEditable" Value="True"/>
             <Setter Property="StaysOpenOnEdit" Value="True"/>
@@ -70,6 +80,8 @@
         </Style>
         <Style TargetType="ComboBox" x:Key="CmbJournal">
             <Setter Property="FontFamily" Value="Franklin Gothic Heavy"/>
+            <Setter Property="FontWeight" Value="DemiBold"/>
+            <Setter Property="FontSize" Value="12px"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="IsEditable" Value="True"/>
             <Setter Property="StaysOpenOnEdit" Value="True"/>
