--- a/UpaProject/App.xaml
+++ b/UpaProject/App.xaml
@@ -22,6 +22,13 @@
             <Setter Property="FontSize" Value="12pt"/>
             <Setter Property="FontWeight" Value="Bold"/>
         </Style>
+        <Style TargetType="RadioButton" x:Key="Rdb">
+            <Setter Property="FontFamily" Value="Franklin Gothic Heavy"/>
+            <Setter Property="FontSize" Value="12pt"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="MinWidth" Value="200"/>
+        </Style>
         <!--Кнопка для меню-->
         <Style TargetType="Button" x:Key="Button_Main">
             <Setter Property="FrameworkElement.Margin" Value="5,3,5,3"/>
