--- a/UpaProject/Views/Storages/StoragesPage.xaml
+++ b/UpaProject/Views/Storages/StoragesPage.xaml
@@ -12,7 +12,7 @@
                     HorizontalAlignment="Center"
                     DockPanel.Dock="Top"
                     >
-            <ComboBox Name="CMB"  />
+            <ComboBox Name="CmbStorage"  />
         </StackPanel>
         <DataGrid Margin="10"/>
     </DockPanel>
